--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Components/ExistingFiles.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Components/ExistingFiles.razor
@@ -11,7 +11,7 @@ else
     <ul>
         @foreach (var f in Files)
         {
-            <ExistingFileElement File="f" EntityApiType="@EntityApiType" EntityId="EntityId" OnFileDeleted="ReloadFiles" />
+            <ExistingFileElement File="f" EntityApiType="@EntityApiType" EntityId="@EntityId" OnFileDeleted="ReloadFiles" />
         }
     </ul>
 }
