--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Auth/NameEdit.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Auth/NameEdit.razor
@@ -31,7 +31,7 @@
 @code {
     private string userName;
     private bool isEditing = false;
-    private string originalUserName = null!;
+    private string originalUserName = string.Empty;
     [Inject] private NavigationManager Navigation { get; set; } = null!;
 
     protected override async Task OnInitializedAsync()
