--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/MainLayout.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/MainLayout.razor
@@ -6,7 +6,11 @@
             <!-- Logo -->
             <a href="/" class="d-flex align-items-center mb-2 mb-md-0 text-dark text-decoration-none">
                 <img src="@Assets["favicon.png"]" alt="My Logo" width="64" height="64" class="me-2" />
+                <span href="/" class="fs-4">Ticketing System</span>
             </a>
+
+            <!-- Site title -->
+            
 
             <!-- Navbar links -->
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
